tests/ui/modules/path-invalid-form.rs
#[path = 123]  //~ ERROR malformed `path` attribute
mod foo;

fn main() {}

// ferrocene-annotations: fls_1zbaajz5prpn
// Attribute path
